# RAG-BOOTCAMP

./: README.md  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-DataParsingPdf.ipynb  3-DataParsingDoc.ipynb  4-CsvExcelParsing.ipynb  5-JsonPasing.ipynb  6-databaseParsing.ipynb
0-DataIngestParsing/data/json_files/: sample_data.json
0-DataIngestParsing/data/structured_files/: sample_data.xlsx  sample_data_multiple_sheets.xlsx
0-DataIngestParsing/data/text_files/: mcp.txt
0-DataIngestParsing/data/word_files/: SumanthAnem-WellsFargo.docx
1-VectorEmbeddings-Databases/: embedding.ipynb  openaiembeddings.ipynb
2-VectorStores/: 1-chromadb.ipynb  1.1-chromadb-OpenAI-Embeddings.ipynb  2-faiss_krish.ipynb  Datastaxdb+(1).ipynb  PineconeVectorDB.ipynb
2-VectorStores/chroma_db/: chroma.sqlite3
3-semantic-chunking.ipynb/: 1-semantichunking.ipynb  1.sanem-sematic_chumking.ipynb  sanem-sematic_chumking.ipynb
