[project]
name = "rag-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.17",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.30",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "unstructured[docx]>=0.18.13",
    "unstructured-inference>=1.0.5",
    "openpyxl>=3.1.5",
    "msoffcrypto-tool>=5.4.2",
    "jq>=1.10.0",
    "matplotlib>=3.10.5",
    "langchain-huggingface>=0.3.1",
    "langchain-chroma>=0.2.5",
    "langchain-faiss>=0.1.1",
    "langchain-weaviate>=0.0.5",
    "langchain-milvus>=0.2.1",
    "langchain-pinecone>=0.2.11",
    "langchain-qdrant>=0.2.0",
    "langchain-redis>=0.2.3",
    "langchain-experimental>=0.3.4",
    "rank-bm25>=0.2.2",
    "wikipedia>=1.4.0",
    "langgraph>=0.6.5",
]
